<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/clearChat"
        android:id="@+id/clearChat"
        app:showAsAction="never"/>

    <item
        android:title="@string/sendPhoto"
        android:id="@+id/sendPhoto"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:title="@string/sendPhotoGallery"
        android:id="@+id/sendPhotoGallery"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:title="@string/sendLocation"
        android:id="@+id/sendLocation"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:title="@string/block"
        android:id="@+id/block"
        app:showAsAction="never"/>

    <item
        android:title="@string/unblock"
        android:id="@+id/unblock"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:title="@string/voice_call"
        android:id="@+id/voiceCall"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_call_white_24dp"/>

    <item
        android:title="@string/video_call"
        android:id="@+id/videoCall"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_videocam_24"/>


</menu>