<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/clearChat"
        android:id="@+id/clearChat"
        app:showAsAction="never"/>

    <item
        android:title="@string/exitGroup"
        android:id="@+id/exitGroup"
        app:showAsAction="never"/>

    <item
        android:title="@string/sendPhoto"
        android:id="@+id/sendPhoto"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:title="@string/sendPhotoGallery"
        android:id="@+id/sendPhotoGallery"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:title="@string/sendLocation"
        android:id="@+id/sendLocation"
        app:showAsAction="never"
        android:visible="false"/>


</menu>